<resources>
  <string name="app_name">NUMAD22sp_CodeBuster_StockNinja</string>
  <string name="hint_search_symbol">Enter a symbol or keyword, e.g. IBM.</string>
  <string name="label_stock_symbol">Stock Symbol:</string>
  <string name="label_company_name">Company Name:</string>
  <string name="btn_start_trading">Start Trading</string>
  <string name="btn_view_chart">View Line Chart</string>
  <string name="label_timestamp">Timestamp</string>
  <string name="label_open">Open</string>
  <string name="label_high">High</string>
  <string name="label_low">Low</string>
  <string name="label_close">Close</string>
</resources>