<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
      android:id="@+id/txtStockSymbol2"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="#3d405b"
      android:textSize="20sp"
      app:layout_constraintBottom_toTopOf="@+id/txtCompanyName2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      app:layout_constraintVertical_chainStyle="packed" />
    <TextView
      android:id="@+id/txtCompanyName2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:textColor="@android:color/darker_gray"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtStockSymbol2" />
  </androidx.constraintlayout.widget.ConstraintLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
      android:id="@+id/btnViewChart"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="4dp"
      android:backgroundTint="#4CC9F0"
      android:enabled="false"
      android:text="@string/btn_view_chart" />
    <Button
      android:id="@+id/btnStartTrading"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="8dp"
      android:backgroundTint="#4361EE"
      android:enabled="false"
      android:text="@string/btn_start_trading" />
  </LinearLayout>
  <ProgressBar
    android:id="@+id/vFetchStatus"
    style="?android:attr/progressBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:indeterminateTint="#4895EF" />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/labelTimestamp"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:text="@string/label_timestamp"
      android:textColor="#373f51" />
    <TextView
      android:id="@+id/labelOpen"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/label_open"
      android:textColor="#ed6a5a" />
    <TextView
      android:id="@+id/labelHigh"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/label_high"
      android:textColor="#5ca4a9" />
    <TextView
      android:id="@+id/labelLow"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/label_low"
      android:textColor="#eab69f" />
    <TextView
      android:id="@+id/labelClose"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/label_close"
      android:textColor="#706993" />
  </LinearLayout>
  <TextView
    android:id="@+id/txtTSErrorMsg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:visibility="gone" />
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvTimeSeries"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />
</LinearLayout>